# within_darkness

./: .gitignore  CMakeLists.txt  README.md
doc/: README.md  documentation.adoc
doc/base/: game.adoc  globalResource.adoc  logger.adoc  main.adoc  options.adoc  resourceHolder.adoc  resourceManager.adoc
doc/misc/: task.adoc
doc/screens/: hudScreen.adoc  levelScreen.adoc  loadingScreen.adoc  menuScreen.adoc  screen.adoc
doc/widgets/: anchor.adoc  boxLayout.adoc  button.adoc  progressBar.adoc  widget.adoc
include/: Game.h  GlobalResource.h  Logger.h  Options.h  ResourceHolder.h  ResourceHolder.inl  ResourceManager.h  Version.h.in  logger.h
include/Misc/: LoadingTask.h  LoadingTask.inl  Task.h
include/Screens/: LevelScreen.h  LoadingScreen.h  MenuScreen.h  Screen.h
include/Widgets/: HBoxLayout.h  VBoxLayout.h  Widget.h
src/: Game.cpp  GlobalResource.cpp  Logger.cpp  Options.cpp  ResourceHolder.cpp  ResourceManager.cpp  logger.cpp  main.cpp
src/Misc/: Task.cpp
src/Screens/: LevelScreen.cpp  LoadingScreen.cpp  MenuScreen.cpp  Screen.cpp
src/Widgets/: HBoxLayout.cpp  VBoxLayout.cpp  Widget.cpp
src/logger/: logger.cpp
